Add SpoonDetector to poggit builds

--- a/.poggit.yml
+++ b/.poggit.yml
@@ -3,4 +3,7 @@ projects:
   VanillaEntityAI:
     path: ""
     icon: "icon.png"
+    libs:
+    - src: Falkirks/spoondetector/spoondetector
+      version: ^0.0.0
 ...
