--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,9 @@ name: VanillaEntityAI
 main: jasonwynn10\VanillaEntityAI\EntityAI
 version: 0.0.1
 api:
-- 3.2
+- 3.0.0
 description: "A plugin for vanilla-like mob AI"
 author: "jasonwynn10"
 load: STARTUP
+softdepend:
+  - PureEntitiesX
