--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: VanillaEntityAI
 main: jasonwynn10\VanillaEntityAI\EntityAI
-version: 1.0.0
+version: 1.0.0-alpha2
 api:
 - 3.0.0
 description: "A plugin for vanilla-like mob AI"
