--- a/plugin.yml
+++ b/plugin.yml
@@ -3,6 +3,8 @@ main: jasonwynn10\VanillaEntityAI\EntityAI
 version: 1.0.0-alpha2
 api:
 - 3.0.0
+mcpe-protocols:
+- 361
 description: "A plugin for vanilla-like mob AI"
 author: "jasonwynn10"
 load: STARTUP
