--- a/tools/phpstan/composer.json
+++ b/tools/phpstan/composer.json
@@ -1,11 +1,32 @@
 {
 	"name": "jasonwynn10/phpstan-plugin-config",
+	"repositories": [
+		{
+			"type": "package",
+			"package": {
+				"name": "salmonde/pathfinding",
+				"version": "0.1.0",
+				"source": {
+					"url": "https://github.com/SalmonDE/Pathfinding.git",
+					"type": "git",
+					"reference": "master"
+				},
+				"autoload": {
+					"psr-4": {
+						"SalmonDE\\Pathfinding\\": "src/"
+					}
+				}
+			}
+		}
+	],
 	"require": {
 		"phpstan/phpstan": "1.4.6",
 		"pocketmine/pocketmine-mp": "4.0.0",
 		"phpstan/phpstan-strict-rules": "^1.0",
 		"phpstan/extension-installer": "^1.0",
-		"symfony/filesystem": "^5.4"
+		"symfony/filesystem": "^5.4",
+		"cortexpe/commando": "dev-master",
+		"salmonde/pathfinding": "*"
 	},
 	"autoload": {
 		"psr-4": {
